SDKs/twilio.com/twilio_trunking_v1/1.37.4/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateCredentialListRequest{
        Security: operations.CreateCredentialListSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        PathParams: operations.CreateCredentialListPathParams{
            TrunkSid: "repellat",
        },
        Request: &operations.CreateCredentialListCreateCredentialListRequest{
            CredentialListSid: "sint",
        },
    }
    
    res, err := s.CreateCredentialList(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.TrunkingV1TrunkCredentialList != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateCredentialList`
* `CreateIPAccessControlList` - Associate an IP Access Control List with a Trunk
* `CreateOriginationURL`
* `CreatePhoneNumber`
* `CreateTrunk`
* `DeleteCredentialList`
* `DeleteIPAccessControlList` - Remove an associated IP Access Control List from a Trunk
* `DeleteOriginationURL`
* `DeletePhoneNumber`
* `DeleteTrunk`
* `FetchCredentialList`
* `FetchIPAccessControlList`
* `FetchOriginationURL`
* `FetchPhoneNumber`
* `FetchRecording`
* `FetchTrunk`
* `ListCredentialList`
* `ListIPAccessControlList` - List all IP Access Control Lists for a Trunk
* `ListOriginationURL`
* `ListPhoneNumber`
* `ListTrunk`
* `UpdateOriginationURL`
* `UpdateRecording`
* `UpdateTrunk`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
